--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1>Santiago Ariza Salas</h1>
+        </div>
+        <div>
+            <h3>FULL STACK DEVELOPER</h3>
+        </div>
+        <div>
+            <ul>
+                <li>6392-1680</li>
+                <li>santiago.ariza.salas@gmail.com</li>
+                <li>San José, Santa Ana, Río Oro</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
