creacion de styles css y graficos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
             <h1>Santiago Ariza Salas</h1>
         </div>
         <div>
-            <h3>FULL STACK DEVELOPER</h3>
+            <h2>FULL STACK DEVELOPER</h3>
         </div>
         <div>
             <ul>
@@ -21,5 +22,47 @@
             </ul>
         </div>
     </header>
+    <main>
+        <div>
+            <h3>Personal skill</h3>
+        </div>
+        <div class="graficos">
+            <div class="porcentajes">
+                <svg class="circulo1" width="110" height="110">
+                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <circle class="fondo1" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                </svg>
+                <span>75%</span>
+            </div>
+            <div class="porcentajes">
+                <svg class="circulo2" width="110" height="110">
+                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <circle class="fondo2" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                </svg>
+                <span>65%</span>
+            </div>
+            <div class="porcentajes">
+                <svg class="circulo3" width="110" height="110">
+                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <circle class="fondo3" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                </svg>
+                <span>45%</span>
+            </div>
+            <div class="porcentajes">
+                <svg class="circulo4" width="110" height="110">
+                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <circle class="fondo4" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                </svg>
+                <span>20%</span>
+            </div>
+            <div class="porcentajes">
+                <svg class="circulo5" width="110" height="110">
+                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <circle class="fondo5" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                </svg>
+                <span>88%</span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
