centrar la pagina con css

--- a/index.html
+++ b/index.html
@@ -7,62 +7,69 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div>
-            <h1>Santiago Ariza Salas</h1>
-        </div>
-        <div>
-            <h2>FULL STACK DEVELOPER</h3>
-        </div>
-        <div>
-            <ul>
-                <li>6392-1680</li>
-                <li>santiago.ariza.salas@gmail.com</li>
-                <li>San José, Santa Ana, Río Oro</li>
-            </ul>
-        </div>
-    </header>
-    <main>
-        <div>
-            <h3>Personal skill</h3>
-        </div>
-        <div class="graficos">
-            <div class="porcentajes">
-                <svg class="circulo1" width="110" height="110">
-                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                    <circle class="fondo1" r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                </svg>
-                <span>75%</span>
+    <div class="cuadro">
+        <header>
+            <div >
+                <div class="titulos">
+                    <div class="nombre">
+                        <h1>SANTIAGO ARIZA SALAS</h1>
+                    </div>
+                    <div class="puesto">
+                        <h2>FULL STACK DEVELOPER</h3>
+                    </div>
+                </div>
+                <div>
+                    <ul class="lista">
+                        <li>6392-1680</li>
+                        <li>santiago.ariza.salas@gmail.com</li>
+                        <li>San José, Santa Ana, Río Oro</li>
+                    </ul>
+                </div>
             </div>
-            <div class="porcentajes">
-                <svg class="circulo2" width="110" height="110">
-                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                    <circle class="fondo2" r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                </svg>
-                <span>65%</span>
+        </header>
+        <hr>
+        <main>
+            <div class="skills">
+                <h3>PERSONAL SKILL</h3>
             </div>
-            <div class="porcentajes">
-                <svg class="circulo3" width="110" height="110">
-                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                    <circle class="fondo3" r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                </svg>
-                <span>45%</span>
+            <div class="graficos">
+                <div class="porcentajes">
+                    <svg class="circulo1" width="110" height="110">
+                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo1" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    </svg>
+                    <span>75%</span>
+                </div>
+                <div class="porcentajes">
+                    <svg class="circulo2" width="110" height="110">
+                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo2" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    </svg>
+                    <span>65%</span>
+                </div>
+                <div class="porcentajes">
+                    <svg class="circulo3" width="110" height="110">
+                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo3" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    </svg>
+                    <span>45%</span>
+                </div>
+                <div class="porcentajes">
+                    <svg class="circulo4" width="110" height="110">
+                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo4" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    </svg>
+                    <span>20%</span>
+                </div>
+                <div class="porcentajes">
+                    <svg class="circulo5" width="110" height="110">
+                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo5" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    </svg>
+                    <span>88%</span>
+                </div>
             </div>
-            <div class="porcentajes">
-                <svg class="circulo4" width="110" height="110">
-                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                    <circle class="fondo4" r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                </svg>
-                <span>20%</span>
-            </div>
-            <div class="porcentajes">
-                <svg class="circulo5" width="110" height="110">
-                    <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                    <circle class="fondo5" r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                </svg>
-                <span>88%</span>
-            </div>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
