Cree listas de la experiencia laboral e imagen

--- a/index.html
+++ b/index.html
@@ -69,6 +69,31 @@
                     <span>88%</span>
                 </div>
             </div>
+            <div class="listas">
+                <div>
+                    <div class="skills">
+                        <h3>JOB EXPERIENCE</h3>
+                    </div>
+                    <div class="experiencia">
+                        <p>Lorem, ipsum dolor.</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        </ul>
+                        <p>Lorem ipsum dolor sit.</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nam.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, rerum!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aspernatur?</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="img">
+                    <img src="img/fotoCV.jpg" alt="">
+                </div>
+            </div>
         </main>
     </div>
 </body>
