Creacion de Education, Hobby, lineas horizontales y vertical e iconos

--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
                         <h1>SANTIAGO ARIZA SALAS</h1>
                     </div>
                     <div class="puesto">
+                        <div>
+                            <hr class="linea">
+                        </div>
                         <h2>FULL STACK DEVELOPER</h3>
+                        <div>
+                            <hr class="linea">
+                        </div>
                     </div>
                 </div>
                 <div>
                     <ul class="lista">
-                        <li>6392-1680</li>
-                        <li>santiago.ariza.salas@gmail.com</li>
-                        <li>San José, Santa Ana, Río Oro</li>
+                        <img class="iconos" src="img/llamada-telefonica.png" alt=""><li>6392-1680</li>
+                        <img class="iconos" src="img/correo-electronico.png" alt=""><li>santiago.ariza.salas@gmail.com</li>
+                        <img class="iconos" src="img/pin-de-mapa.png" alt=""><li>San José, Santa Ana, Río Oro</li>
                     </ul>
                 </div>
             </div>
@@ -34,37 +40,37 @@
             </div>
             <div class="graficos">
                 <div class="porcentajes">
-                    <svg class="circulo1" width="110" height="110">
-                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                        <circle class="fondo1" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <svg class="circulo1" width="100" height="110">
+                        <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo1" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
                     <span>75%</span>
                 </div>
                 <div class="porcentajes">
-                    <svg class="circulo2" width="110" height="110">
-                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                        <circle class="fondo2" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <svg class="circulo2" width="100" height="110">
+                        <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo2" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
                     <span>65%</span>
                 </div>
                 <div class="porcentajes">
-                    <svg class="circulo3" width="110" height="110">
-                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                        <circle class="fondo3" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <svg class="circulo3" width="100" height="110">
+                        <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo3" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
                     <span>45%</span>
                 </div>
                 <div class="porcentajes">
-                    <svg class="circulo4" width="110" height="110">
-                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                        <circle class="fondo4" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <svg class="circulo4" width="100" height="110">
+                        <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo4" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
                     <span>20%</span>
                 </div>
                 <div class="porcentajes">
-                    <svg class="circulo5" width="110" height="110">
-                        <circle r="40" cx="50%" cy="50%" pathlength="100"></circle>
-                        <circle class="fondo5" r="40" cx="50%" cy="50%" pathlength="100"></circle>
+                    <svg class="circulo5" width="100" height="110">
+                        <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
+                        <circle class="fondo5" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
                     <span>88%</span>
                 </div>
@@ -91,7 +97,46 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img src="img/fotoCV.jpg" alt="">
+                    <img class="yo" src="img/fotoCV.jpg" alt="">
+                </div>
+            </div>
+            <div class="educacionYhobby">
+                <div class="educacion">
+                    <div>
+                        <H3 class="skills">EDUCATION</H3>
+                    </div>
+                    <div class="experiencia">
+                        <p>Colegio De Santa Ana (2014 - 2019)</p>
+                        <ul>
+                            <li>Bachillerato</li>
+                        </ul>
+                        <P>FWD</P>
+                        <ul>
+                            <li>Full Stack Developer</li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <hr class="lineaHorizontal">
+                </div>
+                <div class="hobby">
+                    <h3>HOBBY</h3>
+                    <div class="hobby1">
+                        <div>
+                            <img class="iconos2" src="img/corriendo.png" alt=""><p>correr</p></img>
+                        </div>
+                        <div>
+                            <img class="iconos2" src="img/viaje.png" alt=""><p>viajar</p></img>
+                        </div>
+                    </div>
+                    <div class="hobby1">
+                       <div>
+                            <img class="iconos2" src="img/television.png" alt=""><p>TV</p></img>
+                       </div>
+                        <div>
+                            <img class="iconos2" src="img/auriculares-inalambricos (1).png" alt=""><p>musica</p></img>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
