enlaces a info de contacto

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </div>
                 <div>
                     <ul class="lista">
-                        <img class="iconos" src="img/llamada-telefonica.png" alt=""><li>6392-1680</li>
-                        <img class="iconos" src="img/correo-electronico.png" alt=""><li>santiago.ariza.salas@gmail.com</li>
-                        <img class="iconos" src="img/pin-de-mapa.png" alt=""><li>San José, Santa Ana, Río Oro</li>
+                        <a href="https://web.whatsapp.com/"><img class="iconos" src="img/llamada-telefonica.png" alt=""></a><li>6392-1680</li>
+                        <a href="https://www.google.com/intl/es/gmail/about/"><img class="iconos" src="img/correo-electronico.png" alt=""></a><li>santiago.ariza.salas@gmail.com</li>
+                        <a href="https://www.google.com/maps/place/R%C3%ADo+Oro/@9.9116547,-84.198337,17z/data=!3m1!4b1!4m6!3m5!1s0x8fa0fe9a739557d3:0x54a9dac4c0300358!8m2!3d9.9116988!4d-84.1957627!16s%2Fg%2F11cl_578gz?entry=ttu"><img class="iconos" src="img/pin-de-mapa.png" alt=""></a><li>San José, Santa Ana, Río Oro</li>
                     </ul>
                 </div>
             </div>
@@ -44,35 +44,40 @@
                         <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
                         <circle class="fondo1" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
-                    <span>75%</span>
+                    <span>90%</span>
+                    <p class="parrafo">HTML</p>
                 </div>
                 <div class="porcentajes">
                     <svg class="circulo2" width="100" height="110">
                         <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
                         <circle class="fondo2" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
-                    <span>65%</span>
+                    <span>75%</span>
+                    <p class="parrafo">CSS</p>
                 </div>
                 <div class="porcentajes">
                     <svg class="circulo3" width="100" height="110">
                         <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
                         <circle class="fondo3" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
-                    <span>45%</span>
+                    <span>60%</span>
+                    <p class="parrafo">JS</p>
                 </div>
                 <div class="porcentajes">
                     <svg class="circulo4" width="100" height="110">
                         <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
                         <circle class="fondo4" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
-                    <span>20%</span>
+                    <span>60%</span>
+                    <p class="parrafo">REACT</p>
                 </div>
                 <div class="porcentajes">
                     <svg class="circulo5" width="100" height="110">
                         <circle r="35" cx="50%" cy="50%" pathlength="100"></circle>
                         <circle class="fondo5" r="35" cx="50%" cy="50%" pathlength="100"></circle>
                     </svg>
-                    <span>88%</span>
+                    <span>70%</span>
+                    <p class="parrafo">PYTHON</p>
                 </div>
             </div>
             <div class="listas">
