Inserte mi foto y la info de contactos cambia de color cuando paso por encima

--- a/index.html
+++ b/index.html
@@ -86,23 +86,22 @@
                         <h3>JOB EXPERIENCE</h3>
                     </div>
                     <div class="experiencia">
-                        <p>Lorem, ipsum dolor.</p>
+                        <p>Responsabilidades:</p>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                            <li>Development and maintenance of web and mobile applications using front-end and back-end technologies.</li>
+                            <li>Collaboration with the design team to implement attractive and functional user interfaces.</li>
+                            <li>Website performance optimization.</li>
                         </ul>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <p>Logros Destacados:</p>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nam.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, rerum!</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aspernatur?</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.</li>
+                            <li>Led the development of a project management web application that increased operational efficiency by 30%</li>
+                            <li>I mentored new team members, facilitating their integration and contribution to the project.</li>
+                            <li>Contributed to the design and development of an intuitive user interface that received praise from end users.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="img">
-                    <img class="yo" src="img/fotoCV.jpg" alt="">
+                    <img class="yo" src="img/IMG-Santi.jpg" alt="">
                 </div>
             </div>
             <div class="educacionYhobby">
@@ -128,10 +127,10 @@
                     <h3>HOBBY</h3>
                     <div class="hobby1">
                         <div>
-                            <img class="iconos2" src="img/corriendo.png" alt=""><p>correr</p></img>
+                            <img class="iconos2" src="img/corriendo.png" alt=""><p>Correr</p></img>
                         </div>
                         <div>
-                            <img class="iconos2" src="img/viaje.png" alt=""><p>viajar</p></img>
+                            <img class="iconos2" src="img/viaje.png" alt=""><p>Viajar</p></img>
                         </div>
                     </div>
                     <div class="hobby1">
@@ -139,7 +138,7 @@
                             <img class="iconos2" src="img/television.png" alt=""><p>TV</p></img>
                        </div>
                         <div>
-                            <img class="iconos2" src="img/auriculares-inalambricos (1).png" alt=""><p>musica</p></img>
+                            <img class="iconos2" src="img/auriculares-inalambricos (1).png" alt=""><p>Musica</p></img>
                         </div>
                     </div>
                 </div>
