Creacion de funciones a los icono de hobby

--- a/index.html
+++ b/index.html
@@ -127,23 +127,24 @@
                     <h3>HOBBY</h3>
                     <div class="hobby1">
                         <div>
-                            <img class="iconos2" src="img/corriendo.png" alt=""><p>Correr</p></img>
+                            <button id="imagen"><img class="iconos2" src="img/corriendo.png" alt=""></button><p>Correr</p></img>
                         </div>
                         <div>
-                            <img class="iconos2" src="img/viaje.png" alt=""><p>Viajar</p></img>
+                            <button id="imagen2"><img class="iconos2" src="img/viaje.png" alt=""></button><p>Viajar</p></img>
                         </div>
                     </div>
                     <div class="hobby1">
                        <div>
-                            <img class="iconos2" src="img/television.png" alt=""><p>TV</p></img>
+                           <button id="imagen3"> <img class="iconos2" src="img/television.png" alt=""></button><p>TV</p></img>
                        </div>
                         <div>
-                            <img class="iconos2" src="img/auriculares-inalambricos (1).png" alt=""><p>Musica</p></img>
+                            <button id="imagen4"><img class="iconos2" src="img/auriculares-inalambricos (1).png" alt=""></button><p>Musica</p></img>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
