Mejora en las funciones de los iconos de hobby

--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="contenedorp">
+                <div id="div" class="show">
+                    <p>Salgo a correr todos los dias por lo menos 30 min.</p>
+                </div>
+                <div id="div2" class="show">
+                    <p>Me encanta viajar y conocer lugares nuevos.</p>
+                </div>
+                <div id="div3" class="show">
+                    <p>Me fascina ver peliculas, mi categoria favorita es la comedia.</p>
+                </div>
+                <div id="div4" class="show">
+                    <p>Me gusta todo tipo de musica, pero de preferencia hip hop.</p>
+                </div>
+            </div>
         </main>
     </div>
     <script src="index.js"></script>
